updated maps link

--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
       <li><strong>Location:</strong></li>
     </ul>
     <div class="map">
-      <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.8354345093747!2d144.9559233154081!3d-37.81720944209324!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0xf577f02f4f00d7e!2sFederation%20Square!5e0!3m2!1sen!2sus!4v1634791429023!5m2!1sen!2sus"
-        width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14413.796723237228!2d49.6022062!3d25.4232422!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e3797b9f42ea6cb%3A0x8b89f602efafd3b9!2z2LTYp9mE2YrZhyDYs9mK2YTZitin!5e0!3m2!1sen!2ssa!4v1732873960503!5m2!1sen!2ssa" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </section>
 
